# plugin-bitwig

./: .clang-format  .clangd  .gitattributes  .gitignore  .mcp.json  CMakeLists.txt  README.md  icon.config.py  platformio.ini  pyproject.toml
.github/: release-tooling.json
.github/workflows/: candidate-extension.yml  candidate-firmware.yml  ci.yml
asset/font/data/: bitwig_icons_12.c.inc  bitwig_icons_12.hpp  bitwig_icons_14.c.inc  bitwig_icons_14.hpp  bitwig_icons_18.c.inc  bitwig_icons_18.hpp
embedded/: Plugin.cpp  Plugin.hpp
embedded/handler/: PluginHostHandler.cpp  PluginHostHandler.hpp
embedded/handler/device/: DeviceConstants.hpp  DeviceHostHandler.cpp  DeviceHostHandler.hpp  DeviceInputHandler.cpp  DeviceInputHandler.hpp  TrackConstants.hpp  TrackInputHandler.cpp  TrackInputHandler.hpp
embedded/handler/lastclicked/: LastClickedHandler.cpp  LastClickedHandler.hpp
embedded/handler/plugin/: PluginLifecycleHandler.cpp  PluginLifecycleHandler.hpp
embedded/handler/transport/: TransportHostHandler.cpp  TransportHostHandler.hpp  TransportInputHandler.cpp  TransportInputHandler.hpp
embedded/protocol/: DecoderRegistry.hpp  MessageStructure.hpp  Protocol.hpp  ProtocolConstants.hpp
embedded/ui/: ViewContainer.cpp  ViewContainer.hpp  ViewManager.cpp  ViewManager.hpp  ViewRegistry.hpp
host/: .editorconfig  .gitignore  download-api.sh  pom.xml
host/src/: .gitignore
protocol/: binary_protocol_config.py  plugin_paths.py  pyrightconfig.json  serial8_protocol_config.py  sysex_messages.py  sysex_protocol_config.py
protocol/enums/: __init__.py  device.py  navigation.py  track.py
protocol/field/: __init__.py  color.py  device.py  parameter.py  send.py  track.py  transport.py
protocol/message/: device.py  lastclicked.py  plugin.py  track.py  transport.py
resource/img/: Bitwig_Logo.c  README.md
script/: patch_usb_midi_sysex.py
script/bash/: bitwig-clean.sh  bitwig-compile.sh  bitwig-package.sh
script/dev/: README.md  format.sh  restart-clangd.sh
script/extension/: bitwig-clean.sh  bitwig-compile.sh  bitwig-package.sh  download-api.sh
script/font/: README.md  bitwig_icons.conf  generate_bitwig_icons.sh  generate_icon_font.py
script/icons/: build.py  config.py  generate_icons.sh  test_svg.py
script/lib/: common.sh
script/pio/: compiledb.py  oc_service.py
script/protocol/: generate_protocol.sh
scripts/: generate_protocol.sh
sdl/: app.cmake  main-native.cpp  main-wasm.cpp
src/: Plugin.cpp  Plugin.hpp  main.cpp  name.c
src/app/: AppLogic.hpp
src/config/: LastClickedConfig.hpp
src/context/: BitwigBootContext.hpp  BitwigContext.cpp  BitwigContext.hpp
src/handler/: DeviceConstants.hpp  InputUtils.hpp  NestedIndexUtils.hpp  PluginHostHandler.cpp  PluginHostHandler.hpp  TrackConstants.hpp  ViewNavigationHandler.cpp  ViewNavigationHandler.hpp
src/protocol/: BitwigProtocol.cpp  BitwigProtocol.hpp  ChildType.hpp  Decoder.hpp  DecoderRegistry.hpp  DeviceType.hpp  Encoder.hpp  Logger.hpp  MessageID.hpp  MessageStructure.hpp  ParameterType.hpp  Protocol.hpp  Protocol.hpp.template  ProtocolCallbacks.hpp  ProtocolConstants.hpp  ProtocolMethods.hpp  ProtocolMethods.inl  ProtocolMethods.ipp  TrackType.hpp  ViewType.hpp
src/state/: BitwigState.hpp  Constants.hpp  DeviceInfoState.hpp  HostState.hpp  LastClickedState.hpp  OverlayController.cpp  OverlayController.hpp  OverlayManager.hpp  OverlayTypes.hpp  ParameterState.hpp  SelectorState.hpp  TransportState.hpp  ViewManager.hpp
src/ui/: LVGLSymbol.hpp  OverlayTypes.hpp  ViewContainer.cpp  ViewContainer.hpp  ViewManager.cpp  ViewManager.hpp  ViewRegistry.hpp
sysex_protocol/: __init__.py  plugin_paths.py  pyrightconfig.json  sysex_protocol_config.py
sysex_protocol/field/: __init__.py  color.py  device.py  parameter.py  plugin.py  track.py  transport.py
sysex_protocol/message/: __init__.py  device.py  lastclicked.py  plugin.py  track.py  transport.py
test/test_NestedIndexUtils/: test_main.cpp
tools/font/: generate_icon_font.py  generate_lvgl_binary_font.sh
(+612 files in other folders)
