[project]
name = "bitwig-midi-studio"
version = "0.1.0"
description = "Bitwig Studio MIDI Controller Plugin"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "protocol-codegen @ git+https://github.com/petitechose-audio/protocol-codegen.git",
    "fonttools>=4.47.0",
    "svgpathtools>=1.6.0",
]

[tool.pyright]
include = ["sysex_protocol", "tools"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
