[project]
name = "bitwig-midi-studio"
version = "0.1.0"
description = "Bitwig Studio MIDI Controller Plugin"
requires-python = ">=3.13"
dependencies = [
    "nanoemoji>=0.15.9",
    "picosvg>=0.22.3",
]

[dependency-groups]
dev = [
    "protocol-codegen",
    "fonttools>=4.47.0",
    "svgpathtools>=1.6.0",
]

[tool.uv.sources]
protocol-codegen = { path = "../../open-control/protocol-codegen", editable = true }

[tool.pyright]
include = ["protocol"]
extraPaths = ["protocol", "../open-control/protocol-codegen/src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
